--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -26,6 +26,12 @@
 	display: flex;
 }
 
+#menuBox {
+	display: flex;
+	flex: 1;
+	align-items: center;
+}
+
 #mobileMenu {
 	flex: 1;
 	display: none;
@@ -49,6 +55,10 @@
 
 	#openMenuIcon {
 		display: flex;
+	}
+
+	#menuBox {
+		flex-direction: column;
 	}
 
 	#fullMenu {
